test-cases/call_unknown.exp
Error detected during type checking of modules call_unknown
[91mtest-cases/call_unknown.wybe:1:24: Unknown variable/procedure/function 'nonexistent_proc' in foo
[0m