test-cases/call_unknown.wybe
proc foo(x:int,?y:int) nonexistent_proc(x,?y) end
